<resources>
    <string name="app_name">NoteApp</string>
    <string name="application_icon">Application Icon</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="saved_passwords">Saved Passwords</string>
    <string name="deleted_passwords">Deleted Passwords</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="website">Website</string>
    <string name="email_or_user_name">Email OR User Name</string>
    <string name="password">Password</string>
    <string name="restore">Restore</string>
</resources>