<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView

        android:layout_marginTop="26dp"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:src="@drawable/main_icon"
        android:contentDescription="@string/application_icon" />
    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:textSize="23sp"
        android:inputType="textEmailAddress"
        android:autofillHints="" />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:autofillHints="" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/login"
        android:textSize="23sp"

        android:padding="10dp"
        android:layout_marginEnd="10dp"

        />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/sign_up"
        android:textSize="23sp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        />
</LinearLayout>
</LinearLayout>