<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:orientation="vertical">

  <ImageView
      android:layout_margin="20dp"
      android:layout_width="match_parent"
      android:layout_height="234dp"
      android:src="@drawable/main_icon" />
  <EditText
      android:layout_margin="23dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_email"
      android:textSize="18sp"
      android:id="@+id/etEmailSignup"
      />
  <EditText
      android:layout_margin="23dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_password"
      android:textSize="18sp"
      android:id="@+id/etPassSignup"
      android:inputType="textPassword"
      />
  <Button
    android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/create_account"
      android:id="@+id/btnCreateAccount"
      />
  </LinearLayout>